--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -201,6 +201,11 @@
                     "description": "Enable pretty-printing for gdb",
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
+                },
+                {
+                    "description": "Enable all-exceptions",
+                    "text": "catch throw",
+                    "ignoreFailures": true
                 }
             ]
         }
