--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -28,6 +28,7 @@ xarray = "^2022.3.0"
 seaborn = "^0.11.2"
 SciencePlots = "^1.0.9"
 ipywidgets = "^7.7.1"
+SimpleITK = "^2.1.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
