--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -18,6 +18,7 @@ dictquery = "^0.4.0"
 scipy = "^1.8.0"
 nibabel = "^3.2.2"
 plotly = "^5.10.0"
+tqdm = "^4.64.1"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
@@ -31,6 +32,7 @@ ipywidgets = "^7.7.1"
 SimpleITK = "^2.1.1"
 numdifftools = "^0.9.40"
 joblib = "^1.1.0"
+Cython = "^0.29.32"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
