--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -19,6 +19,7 @@ scipy = "^1.8.0"
 nibabel = "^3.2.2"
 plotly = "^5.10.0"
 tqdm = "^4.64.1"
+scikit-image = "^0.19.3"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.17.0"
