--- a/experiments/requirements.txt
+++ b/experiments/requirements.txt
@@ -6,13 +6,18 @@ charset-normalizer==2.1.1 ; python_version >= "3.8" and python_version < "3.11"
 click==8.1.3 ; python_version >= "3.8" and python_version < "3.11"
 colorama==0.4.5 ; python_version >= "3.8" and python_version < "3.11" and platform_system == "Windows"
 cryptography==38.0.1 ; python_version >= "3.8" and python_version < "3.11"
+cycler==0.11.0 ; python_version >= "3.8" and python_version < "3.11"
 deprecated==1.2.13 ; python_version >= "3.8" and python_version < "3.11"
 dictquery==0.4.0 ; python_version >= "3.8" and python_version < "3.11"
 docker-pycreds==0.4.0 ; python_version >= "3.8" and python_version < "3.11"
+fonttools==4.37.1 ; python_version >= "3.8" and python_version < "3.11"
 gitdb==4.0.9 ; python_version >= "3.8" and python_version < "3.11"
 gitpython==3.1.27 ; python_version >= "3.8" and python_version < "3.11"
 idna==3.3 ; python_version >= "3.8" and python_version < "3.11"
 imageio==2.21.3 ; python_version >= "3.8" and python_version < "3.11"
+joblib==1.2.0 ; python_version >= "3.8" and python_version < "3.11"
+kiwisolver==1.4.4 ; python_version >= "3.8" and python_version < "3.11"
+matplotlib==3.5.3 ; python_version >= "3.8" and python_version < "3.11"
 networkx==2.8.6 ; python_version >= "3.8" and python_version < "3.11"
 nibabel==3.2.2 ; python_version >= "3.8" and python_version < "3.11"
 numpy==1.23.2 ; python_version < "3.11" and python_version >= "3.8"
@@ -37,14 +42,19 @@ redis==4.3.4 ; python_version >= "3.8" and python_version < "3.11"
 requests==2.28.1 ; python_version >= "3.8" and python_version < "3.11"
 scikit-image==0.19.3 ; python_version >= "3.8" and python_version < "3.11"
 scipy==1.9.1 ; python_version >= "3.8" and python_version < "3.11"
+seaborn==0.12.0 ; python_version >= "3.8" and python_version < "3.11"
 sentry-sdk==1.9.8 ; python_version >= "3.8" and python_version < "3.11"
 setproctitle==1.3.2 ; python_version >= "3.8" and python_version < "3.11"
+setuptools-scm==6.4.2 ; python_version >= "3.8" and python_version < "3.11"
+setuptools==65.3.0 ; python_version >= "3.8" and python_version < "3.11"
 shortuuid==1.0.9 ; python_version >= "3.8" and python_version < "3.11"
+simpleitk==2.2.0 ; python_version >= "3.8" and python_version < "3.11"
 six==1.16.0 ; python_version >= "3.8" and python_version < "3.11"
 smmap==5.0.0 ; python_version >= "3.8" and python_version < "3.11"
 sshtunnel==0.4.0 ; python_version >= "3.8" and python_version < "3.11"
 tenacity==8.0.1 ; python_version >= "3.8" and python_version < "3.11"
 tifffile==2022.8.12 ; python_version >= "3.8" and python_version < "3.11"
+tomli==2.0.1 ; python_version >= "3.8" and python_version < "3.11"
 tqdm==4.64.1 ; python_version >= "3.8" and python_version < "3.11"
 urllib3==1.26.12 ; python_version >= "3.8" and python_version < "3.11"
 wandb==0.12.21 ; python_version >= "3.8" and python_version < "3.11"
