--- a/experiments/pyproject.toml
+++ b/experiments/pyproject.toml
@@ -34,6 +34,10 @@ numdifftools = "^0.9.40"
 Cython = "^0.29.32"
 dictquery = "^0.4.0"
 
+[tool.poetry.group.dev.dependencies]
+yapf = "^0.32.0"
+pylint = "^2.15.3"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
