--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -180,6 +180,8 @@
             "args": [
                 "-f",
                 "01_Fixed.mhd",
+                "-fMask",
+                "01_FixedMask.mhd",
                 "-m",
                 "01_Moving.mhd",
                 "-p",
